tz-local/resource/vault/nohelm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: consul-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Consul - MedInvention'
  name: consul
  namespace: vault
spec:
  rules:
    - host: "consul.localdev"
      http:
        paths:
          - defaultBackend:
              service:
                name: consul-ui
                port: ui
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - "https-consul.localdev"
      secretName: ui-tls
