tz-local/resource/vault/nohelm/ingress_tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: vault
  namespace: vault
spec:
  rules:
    - host: "consul.localdev"
      http:
        paths:
          - backend:
              service:
                name: vault-ui
                port:
                  name: ui
            path: /
            pathType: Prefix
  tls:
    - hosts:
      - "https-consul.localdev"
      secretName: ui-tls
